public interface IDamageable
{
    public bool TakeDamage(float amount);
}
